--- a/browser/static/public/css/client.css
+++ b/browser/static/public/css/client.css
@@ -1,3 +1,8 @@
+@charset "UTF-8";
+.electron {
+    display: none;
+}
+
 a {
     color: inherit;
 }
@@ -770,6 +775,24 @@ input:focus,textarea:focus,button:focus {
     margin-right: 12px !important;
 }
 
+.jqx-window-settings-button-background {
+    margin-top: -2px !important;
+    margin-right: 12px !important;
+    right: 36px;
+}
+
+#content-wrapper .jqx-window-settings-button-background {
+     right: 0px !important;
+     margin-top: -4px !important;
+     margin-right: 6px !important;
+}
+
+.jqx-window-settings-button {
+    background-image: url(images/settings.png);
+    cursor: pointer;
+    margin-top: 3px;
+}
+
 .jqx-window-collapse-button:hover {
     border: 1px solid rgba(255,255,255,0.5);
 }
@@ -891,7 +914,7 @@ input:focus,textarea:focus,button:focus {
     background-image: linear-gradient(#dad7d7 0%, #cec7c7 100%) !important;
     color: #eae7e7;
 }
-#currentTime {
+.rightMenu {
     padding: 2px;
     position: absolute;
     right: 2px;
@@ -1337,4 +1360,23 @@ ul.select {
     z-index: 5000 !important;
     font: 10pt sans-serif;
     color: black;
+}
+
+#electronMenu {
+    margin-right: 10px;
+}
+#electronMenu button {
+    vertical-align: middle;
+    cursor: pointer;
+    background-color: transparent !important;
+    font-size: 12px;
+    color: lightgray !important;
+    border: none !important;
+    outline: none !important;
+}
+#electronMenu button:hover {
+    background-color: transparent !important;
+    color: white !important;
+    border: none !important;
+    outline: none !important;
 }
