--- a/browser/static/public/css/client.css
+++ b/browser/static/public/css/client.css
@@ -1380,3 +1380,80 @@ ul.select {
     border: none !important;
     outline: none !important;
 }
+
+div::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background-color: transparent;
+  }
+  
+  div::-webkit-scrollbar-thumb {
+      background: rgb(21 106 167 / 77%);
+      border-radius: 4px;
+      border-color: black;
+      border-style: outset;
+      cursor: pointer;
+   }
+
+  div::-webkit-scrollbar-button:single-button {
+    width: 8px;
+    height: 8px;
+    background-color: transparent;
+    color: rgb(129, 174, 241);
+    display: block;
+    border-style: solid;
+    cursor: pointer;
+  }
+
+  
+
+  /* Up */
+::-webkit-scrollbar-button:single-button:vertical:decrement {
+    border-width: 0 4px 4px 4px;
+    border-color: transparent transparent rgba(21, 106, 167, 0.77) transparent;
+    cursor: pointer;
+  }
+  
+  ::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
+    border-color: transparent transparent rgb(58, 147, 211) transparent;
+  }
+  /* Down */
+  ::-webkit-scrollbar-button:single-button:vertical:increment {
+    border-width: 4px 4px 0 4px;
+    border-color: rgba(21, 106, 167, 0.77) transparent transparent transparent;
+    cursor: pointer;
+  }
+  
+  ::-webkit-scrollbar-button:vertical:single-button:increment:hover {
+    border-color: rgb(58, 147, 211) transparent transparent transparent;
+  }
+
+    /* left */
+::-webkit-scrollbar-button:single-button:horizontal:decrement {
+    border-width: 4px 4px 4px 0;
+    border-color: transparent rgba(21, 106, 167, 0.77) transparent transparent;
+    cursor: pointer;
+  }
+  
+  ::-webkit-scrollbar-button:single-button:horizontal:decrement:hover {
+    border-color: transparent rgb(58, 147, 211) transparent transparent;
+  }
+  /* right */    
+  ::-webkit-scrollbar-button:single-button:horizontal:increment {
+    border-width: 4px 0 4px 4px;
+    border-color: transparent transparent transparent rgba(21, 106, 167, 0.77);
+    cursor: pointer;
+  }
+  
+  ::-webkit-scrollbar-button:single-button:horizontal:increment:hover {
+    border-color: transparent transparent transparent rgb(58, 147, 211);
+  }
+
+  ::-webkit-resizer, ::-webkit-scrollbar-corner {
+      display: none;
+  }
+
+  div {
+      scrollbar-width: thin;
+      scrollbar-color: rgba(21, 106, 167, 0.77) transparent;
+  }
