--- a/browser/static/public/css/client.css
+++ b/browser/static/public/css/client.css
@@ -278,7 +278,8 @@ font-family: 'Bitstream-Vera-Sans-Mono' !important;
   }
   
   #row-center {
-    overflow: auto;
+    overflow: hidden;
+    position:relative;
   }
 
   #row-bottom-left {
@@ -371,21 +372,21 @@ body {
 
 /* Hide scrollbar for Chrome, Safari and Opera*/ 
 #row-center::-webkit-scrollbar {
-  display: none;
+  display: unset;
 }
-#row-center:hover::-webkit-scrollbar {
+/*#row-center:hover::-webkit-scrollbar {
     display: unset;
-  }
+  }*/
   
 /* Hide scrollbar for IE, Edge and Firefox  */
-#row-center {
+/*#row-center {
   -ms-overflow-style: none; 
   scrollbar-width: none; 
-}
-#row-center:hover {
+}*/
+/*#row-center:hover {
     -ms-overflow-style: auto; 
   scrollbar-width:unset; 
-}
+}*/
 
 .smallest-text {
 	font-size: xx-small !important;
