fixes to mapper and mapper walking

--- a/browser/static/public/css/client.css
+++ b/browser/static/public/css/client.css
@@ -282,6 +282,10 @@ font-family: 'Bitstream-Vera-Sans-Mono' !important;
     position:relative;
   }
 
+  .fill-parent {
+    position:absolute;left:0;right:0;top:0;bottom:0;overflow:auto;
+  }
+  
   #row-bottom-left {
     background-color: rgb(21 106 167 / 77%);
   }
