--- a/browser/static/public/css/client.css
+++ b/browser/static/public/css/client.css
@@ -22,6 +22,11 @@ a {
     cursor: pointer;
 }
 
+#helpIndex a {
+    color:rgb(72, 80, 194);
+    cursor: pointer;
+}
+
 .searchResult {
     background-color: yellow;
 }
@@ -1411,6 +1416,53 @@ ul.select {
 .win-Mapper .jqx-menu ul {
     height: 20px !important;
     padding: 0 !important;
+}
+
+#helpContent ul {
+    border: 0 !important;
+    padding: 5px;
+    margin: 5px;
+    list-style-position: outside;
+    margin-left: 15px;
+    box-shadow: none !important;
+}
+
+#helpContent ul>li {
+    padding: 4px !important;
+    border: 0;
+    border-bottom: 2px solid #80808054 !important;
+    margin: 5px;
+    max-width: max-content;
+}
+
+#helpContent ul>li>ul>li {
+    border: 0 !important;
+}
+
+#helpContent  ol {
+    border: 0 !important;
+    padding: 0px;
+    margin: 5px;
+    list-style-position: outside;
+    margin-left: 15px;
+}
+
+#helpContent  ol > li {
+    background: #ddd;
+    padding: 3px;
+    list-style-position: outside;
+}
+
+#helpIndex  ol > li {
+    padding: 3px 5px;
+    list-style-position: outside;
+    margin-left: -15px;
+}
+
+#helpContent hr {
+    margin: 30px 0px 30px 0px;
+    border: 2px solid #bfb8b8;
+    border-radius: 3px;
 }
 
 .jqx-menu-item {
