--- a/browser/static/public/css/client.css
+++ b/browser/static/public/css/client.css
@@ -1435,6 +1435,10 @@ ul.select {
     max-width: max-content;
 }
 
+#helpContent pre {
+    overflow: visible;
+}
+
 #helpContent ul>li>ul>li {
     border: 0 !important;
 }
