aggiorno codemirror e fixxo dei bug scrolling animato dell output (e in opzioni) autologging (in menu connessione dopo a registrazione), interrompibile e scaricabile mapper: correggo comportamento se comandi italiani aggiorno socket-io per vulneraility aggiungo TS2-Contrib nel build, lo clonera a ogni build per includere i file nel dist finestra versioni

--- a/browser/static/public/css/client.css
+++ b/browser/static/public/css/client.css
@@ -313,14 +313,20 @@ font-family: 'Bitstream-Vera-Sans-Mono' !important;
     background-image: url(images/pinned-black.png);
 }
 
-  .full {
-      width:100%;
-      height: 100%;
-  }
+.full {
+    width:100%;
+    height: 100%;
+}
 
-  .scrollable {
-      overflow: auto;
-  }
+.CodeMirror-search-hint {
+    display: none;
+}
+
+.scrollable {
+    overflow: auto;
+    -webkit-overflow-scrolling: auto;
+}
+
   #row-bottom-left>* {
     float: left;
     clear: none;
@@ -403,6 +409,7 @@ font-family: 'Bitstream-Vera-Sans-Mono' !important;
   #row-bottom {
     flex-direction: row;
     display: flex;
+    overflow: hidden;
   }
   #row-input {
     background-color: rgb(21 106 167 / 77%);
