prompt manda a caporiga anche se ci sono immagini allineate sullo schermo che interferirebbero fix a caching di favicon e una script client ora manda versione al server il proxy legge meglio l'ip della connessione

--- a/browser/static/public/css/client.css
+++ b/browser/static/public/css/client.css
@@ -322,6 +322,11 @@ font-family: 'Bitstream-Vera-Sans-Mono' !important;
     display: none;
 }
 
+.prompt {
+    display: block;
+    clear: both;
+}
+
 .scrollable {
     overflow: auto;
     -webkit-overflow-scrolling: auto;
